--- a/src/assets/css/function.less
+++ b/src/assets/css/function.less
@@ -1,6 +1,12 @@
 @color-active: #366cb3;
 
 .color-ac {
-    color: @color-active!important;
+	color: @color-active!important;
 }
 
+.fl {
+	float: left !important;
+}
+.fr {
+	float: right !important;
+}
