职类管理页面

--- a/src/assets/css/function.less
+++ b/src/assets/css/function.less
@@ -10,3 +10,21 @@
 .fr {
 	float: right !important;
 }
+
+.forbidden {
+	padding: 1px 10px;
+	border: 1px solid #ffa39e;
+	border-radius: 5px;
+	span {
+		color: #f5222d;
+	}
+}
+
+.startUse {
+	padding: 1px 10px;
+	border: 1px solid #a9c2d9;
+	border-radius: 5px;
+	span {
+		color: #366cb3;
+	}
+}
