--- a/src/assets/css/function.less
+++ b/src/assets/css/function.less
@@ -11,6 +11,10 @@
 	float: right !important;
 }
 
+.pointer {
+	cursor: pointer !important;
+}
+
 .forbidden {
 	padding: 1px 10px;
 	border: 1px solid #ffa39e;
