--- a/src/assets/css/function.less
+++ b/src/assets/css/function.less
@@ -32,3 +32,16 @@
 		color: #366cb3;
 	}
 }
+
+//滚动条的宽度
+::-webkit-scrollbar {
+	width: 10px;
+	height: 10px;
+	cursor: pointer
+  }
+  //滚动条的滑块
+  ::-webkit-scrollbar-thumb {
+	background-color: #a1a3a9;
+	border-radius: 10px;
+	cursor: pointer
+  }
