--- a/src/assets/css/function.less
+++ b/src/assets/css/function.less
@@ -1,47 +1,47 @@
 @color-active: #366cb3;
 
 .color-ac {
-	color: @color-active!important;
+  color: @color-active!important;
 }
 
 .fl {
-	float: left !important;
+  float: left !important;
 }
 .fr {
-	float: right !important;
+  float: right !important;
 }
 
 .pointer {
-	cursor: pointer !important;
+  cursor: pointer !important;
 }
 
 .forbidden {
-	padding: 1px 10px;
-	border: 1px solid #ffa39e;
-	border-radius: 5px;
-	span {
-		color: #f5222d;
-	}
+  padding: 1px 10px;
+  border: 1px solid #ffa39e;
+  border-radius: 5px;
+  span {
+    color: #f5222d;
+  }
 }
 
 .startUse {
-	padding: 1px 10px;
-	border: 1px solid #a9c2d9;
-	border-radius: 5px;
-	span {
-		color: #366cb3;
-	}
+  padding: 1px 10px;
+  border: 1px solid #a9c2d9;
+  border-radius: 5px;
+  span {
+    color: #366cb3;
+  }
 }
 
 //滚动条的宽度
 ::-webkit-scrollbar {
-	width: 10px;
-	height: 10px;
-	cursor: pointer
-  }
-  //滚动条的滑块
-  ::-webkit-scrollbar-thumb {
-	background-color: #a1a3a9;
-	border-radius: 10px;
-	cursor: pointer
-  }
+  width: 10px;
+  height: 10px;
+  cursor: pointer;
+}
+//滚动条的滑块
+::-webkit-scrollbar-thumb {
+  background-color: #a1a3a9;
+  border-radius: 10px;
+  cursor: pointer;
+}
