--- a/src/assets/css/initialize.css
+++ b/src/assets/css/initialize.css
@@ -1,24 +1,26 @@
 @charset "utf-8";
 
 * {
-	margin: 0;
-	padding: 0;
-	user-select: none;
-	-ms-user-select: none;
-	-moz-user-select: none;
-	-webkit-user-select: none;
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
-	-webkit-appearance: none;
-	-webkit-backface-visibility: hidden;
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  margin: 0;
+  padding: 0;
+  user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-appearance: none;
+  -webkit-backface-visibility: hidden;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  font-family: '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', 'Helvetica Neue',
+    Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 
 body {
-	color: rgba(0, 0, 0, 0.65);
-	background-color: #fff;
-	background: #e9e9e9;
-	font-size: 14px;
+  color: rgba(0, 0, 0, 0.65);
+  background-color: #fff;
+  background: #e9e9e9;
+  font-size: 14px;
 }
 
 h1,
@@ -27,26 +29,26 @@ h3,
 h4,
 h5,
 h6 {
-	font-size: 16px;
-	font-weight: normal;
-	text-decoration: none;
+  font-size: 16px;
+  font-weight: normal;
+  text-decoration: none;
 }
 
 hr {
-	height: 0;
-	overflow: visible;
-	-webkit-box-sizing: content-box;
-	box-sizing: content-box;
+  height: 0;
+  overflow: visible;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box;
 }
 
 a {
-	text-decoration: none;
-	background-color: transparent;
+  text-decoration: none;
+  background-color: transparent;
 }
 
 a:focus,
 *:focus {
-	outline: none;
+  outline: none;
 }
 
 /* 未访问的链接 */
@@ -54,15 +56,15 @@ a:link,
 a:visited,
 a:hover,
 a:active {
-	color: #3a3c4c;
+  color: #3a3c4c;
 }
 
 /* 缩写标签格式化 */
 abbr[title] {
-	border-bottom: none;
-	text-decoration: underline;
-	-webkit-text-decoration: underline dotted;
-	text-decoration: underline dotted;
+  border-bottom: none;
+  text-decoration: underline;
+  -webkit-text-decoration: underline dotted;
+  text-decoration: underline dotted;
 }
 
 b,
@@ -73,37 +75,37 @@ s,
 big,
 small,
 em {
-	font-size: 16px;
-	font-style: normal;
-	text-decoration: none;
-	font-weight: normal;
+  font-size: 16px;
+  font-style: normal;
+  text-decoration: none;
+  font-weight: normal;
 }
 
 code,
 kbd,
 samp {
-	font-family: monospace, monospace;
+  font-family: monospace, monospace;
 }
 
 sub,
 sup {
-	line-height: 0;
-	font-size: 12px;
-	position: relative;
-	vertical-align: baseline;
+  line-height: 0;
+  font-size: 12px;
+  position: relative;
+  vertical-align: baseline;
 }
 
 sub {
-	bottom: -0.25em;
+  bottom: -0.25em;
 }
 
 sup {
-	top: -0.5em;
+  top: -0.5em;
 }
 
 img {
-	display: inline-block;
-	border-style: none;
+  display: inline-block;
+  border-style: none;
 }
 
 button,
@@ -111,80 +113,80 @@ input,
 optgroup,
 select,
 textarea {
-	font-family: inherit;
+  font-family: inherit;
 }
 
 button,
 input {
-	outline: none;
-	display: block;
-	overflow: visible;
+  outline: none;
+  display: block;
+  overflow: visible;
 }
 
 button,
 select {
-	text-transform: none;
+  text-transform: none;
 }
 
 button,
 [type='button'],
 [type='reset'],
 [type='submit'] {
-	-webkit-appearance: button;
+  -webkit-appearance: button;
 }
 
 button::-moz-focus-inner,
 [type='button']::-moz-focus-inner,
 [type='reset']::-moz-focus-inner,
 [type='submit']::-moz-focus-inner {
-	border-style: none;
+  border-style: none;
 }
 
 button:-moz-focusring,
 [type='button']:-moz-focusring,
 [type='reset']:-moz-focusring,
 [type='submit']:-moz-focusring {
-	outline: 1px dotted ButtonText;
+  outline: 1px dotted ButtonText;
 }
 
 /* 自定义placeholder样式 */
 ::-webkit-input-placeholder {
-	color: #3a3c4c;
+  color: #3a3c4c;
 }
 
 :-moz-placeholder {
-	color: #3a3c4c;
+  color: #3a3c4c;
 }
 
 ::-moz-placeholder {
-	color: #3a3c4c;
+  color: #3a3c4c;
 }
 
 :-ms-input-placeholder {
-	color: #3a3c4c;
+  color: #3a3c4c;
 }
 
 textarea {
-	overflow: auto;
+  overflow: auto;
 }
 
 [type='number']::-webkit-inner-spin-button,
 [type='number']::-webkit-outer-spin-button {
-	height: auto;
+  height: auto;
 }
 
 [type='search'] {
-	outline-offset: -2px;
-	-webkit-appearance: textfield;
+  outline-offset: -2px;
+  -webkit-appearance: textfield;
 }
 
 [type='search']::-webkit-search-decoration {
-	-webkit-appearance: none;
+  -webkit-appearance: none;
 }
 
 ::-webkit-file-upload-button {
-	font: inherit;
-	-webkit-appearance: button;
+  font: inherit;
+  -webkit-appearance: button;
 }
 
 dl,
@@ -193,134 +195,134 @@ dd,
 ol,
 ul,
 li {
-	list-style: none;
+  list-style: none;
 }
 
 table {
-	border-spacing: 0;
-	border-collapse: collapse;
+  border-spacing: 0;
+  border-collapse: collapse;
 }
 
 th {
-	text-align: inherit;
+  text-align: inherit;
 }
 
 /* 鼠标样式 */
 .cp {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 .cm {
-	cursor: move;
+  cursor: move;
 }
 
 /* 遮罩层 */
 .mask {
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	position: fixed;
-	background: rgba(0, 0, 0, 0.6);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background: rgba(0, 0, 0, 0.6);
 }
 
 /* display */
 summary {
-	display: list-item;
+  display: list-item;
 }
 
 .hide,
 [hidden],
 template {
-	display: none;
+  display: none;
 }
 
 .block,
 details,
 iframe {
-	display: block;
+  display: block;
 }
 
 .inlineBlock,
 .fl,
 .fr {
-	display: inline-block;
+  display: inline-block;
 }
 
 /* 浮动 */
 .fl {
-	float: left;
+  float: left;
 }
 
 .fr {
-	float: right;
+  float: right;
 }
 
 /* 文字定位 */
 .al {
-	text-align: left;
+  text-align: left;
 }
 
 .ac {
-	text-align: center;
+  text-align: center;
 }
 
 .ar {
-	text-align: right;
+  text-align: right;
 }
 
 /* 定位、居中 */
 .fixed {
-	position: fixed;
+  position: fixed;
 }
 
 .relative {
-	position: relative;
+  position: relative;
 }
 
 .absolute {
-	position: absolute;
+  position: absolute;
 }
 
 .horMid {
-	left: 50%;
-	transform: translateX(-50%);
-	-ms-transform: translateX(-50%);
-	-webkit-transform: translateX(-50%);
+  left: 50%;
+  transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
 }
 
 .verMid {
-	top: 50%;
-	transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	-webkit-transform: translateY(-50%);
+  top: 50%;
+  transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
 }
 
 .marginMiddle {
-	margin: 0 auto;
+  margin: 0 auto;
 }
 
 .imgMid {
-	vertical-align: middle;
+  vertical-align: middle;
 }
 
 /* 清除浮动 */
 .clearfix {
-	*zoom: 1;
+  *zoom: 1;
 }
 
 .clearfix::after {
-	clear: both;
+  clear: both;
 }
 
 .clearfix::before,
 .clearfix::after {
-	content: '';
-	display: table;
+  content: '';
+  display: table;
 }
 
 /* 强制不换行 */
 .nowrap {
-	white-space: nowrap;
-	word-break: break-all;
+  white-space: nowrap;
+  word-break: break-all;
 }
