feat employee page

--- a/src/assets/css/function.less
+++ b/src/assets/css/function.less
@@ -24,6 +24,24 @@
     color: #f5222d;
   }
 }
+.success {
+  padding: 1px 10px;
+  border: 1px solid #87e8de;
+  border-radius: 5px;
+	background: #e6fffb;
+  span {
+		color: #13c2c2;
+  }
+}
+.warning {
+  padding: 1px 10px;
+  border: 1px solid #ffd591;
+  border-radius: 5px;
+	background: #fff7e6;
+  span {
+    color: #fa8c16;
+  }
+}
 
 .startUse {
   padding: 1px 10px;
