--- a/src/assets/css/function.less
+++ b/src/assets/css/function.less
@@ -16,6 +16,15 @@
   cursor: pointer !important;
 }
 
+.layout {
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.ovHidden {
+  overflow: hidden;
+}
+
 .forbidden {
   padding: 1px 10px;
   border: 1px solid #ffa39e;
